--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="hero-modal">
             <button class="btn-modal-close" type="button" data-modal-close>
               <svg class="icon-close" width="18" height="18">
-                <use href="../images/icon-send.svg#icon-close"></use>
+                <use href="./images/symbol-defs.svg#close" width="18" height="18"></use>
               </svg>
             </button>
             <form class="modal-order-form" autocomplete="off">
