--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="form-field">
                 <input class="modal-form-input" id="name" type="name" name="name" />
                 <svg class="input-icon" width="18" height="18">
-                  <use href="../images/symbol-defs.svg#person" width="18" heigth="18"></use>
+                  <use href="./images/symbol-defs.svg#person" width="18" heigth="18"></use>
                 </svg>
               </div>
                 
